# Match-And-Log

./: .gitignore  Cargo.toml  README.md  cfg.json.example
src/: main.rs
src/cmdline/: parse.rs
src/config/: cfg.rs  mod.rs
src/process/: command.rs  mod.rs  output.rs  parse.rs
